--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,3 @@
 spring:
-  mail:
-    host: smtp.163.com
-    username: banghao_chi@163.com
-    password: XISHSHSBJBMVWJPE
-  rabbitmq:
-    addresses: localhost
-    username: user
-    password: 123456
-    virtual-host: /
-  security:
-    jwt:
-      key: wyb20030714
-      expire: 7
-  datasource:
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  mybatis-plus:
-    configuration:
-      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+  profiles:
+    active: '@environment@'
