--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -23,7 +23,7 @@ spring:
     virtual-host: /
   security:
     jwt:
-      key: wyb20030714
+      key: ${jwt_key}
       expire: 7
   datasource:
     url: jdbc:mysql://localhost:3306/test
